<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="this is username"
            android:id="@+id/username" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:id="@+id/age" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/male_or_female"
            android:id="@+id/gender" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phoneno"
            android:id="@+id/phoneNo" />
        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dob" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:onClick="btnclick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_information"
                android:id="@+id/changeInfo" />
            <Button
                android:onClick="btnclick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changePass"
                android:text="@string/change_password" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>